# MarineRoboticsTeam1

./: .gitignore  .gitmodules  Dockerfile  README.md  debugging.md  fork_repo_guide.md  windows_build_guide.md
Slides/: 2 Model Identification Activity.pptx  3 Path Planning for Marine Surveys.pptx  Regarding Experiment.pptx  T2 - Learning models from data.pptx  T3 - Path Planning.pptx  TS2_-_From_motion_data_to_dynamic_models.pptx
Training Sessions/TS2 Exercise 2 Reference/: SURGE_BAG_mocap_velocity_estimates.mat  mocap_body_velocity_estimation.py
Training Sessions/TS2 Models from Data/: Training_session_2_Model_learning_Heading.mlx  Training_session_2_Model_learning_Steering.mlx  ZIGZAG1_combined.csv
Training_Sessions/TS5_Underwater_Navigation/ts5_ws/src/ts5_pose_estimation/: CMakeLists.txt  package.xml
Training_Sessions/TS5_Underwater_Navigation/ts5_ws/src/ts5_pose_estimation/config/: ekf_params.yaml
Training_Sessions/TS5_Underwater_Navigation/ts5_ws/src/ts5_pose_estimation/launch/: bag_demo.launch  ekf.launch  start_ekf_demo.launch
Training_Sessions/TS5_Underwater_Navigation/ts5_ws/src/ts5_pose_estimation/rviz/: bag_pose_estimation.rviz  bluerov2_pose_estimation.rviz
Training_Sessions/TS5_Underwater_Navigation/ts5_ws/src/ts5_pose_estimation/src/: odometry_to_path.py  pose_stamped_to_path.py  republish_depth_as_pose.py
docker/: Dockerfile
ros_ws/: Readme.md
scripts/: activate_conda.sh  build_and_create_docker.sh  build_and_create_docker_m1.sh  get_course_updates.sh  save_my_changes.sh  start_container.sh  windows_build_and_create_docker.sh
(+153 files in other folders)
